src/main/gen/com/asherbernardi/jsgfplugin/parser/JsgfBnfParser.java
// This is a generated file. Not intended for manual editing.
package com.asherbernardi.jsgfplugin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.asherbernardi.jsgfplugin.psi.JsgfBnfTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class JsgfBnfParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return jsgfFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(EXPANSION, EXPANSION_WITH_TAG_EXP, OPTIONAL_GROUP_EXP, PARENTHESES_GROUP_EXP,
      RULE_REFERENCE_EXP, SEQUENCE_EXP, STRING_EXP, TERMINAL_EXP,
      UNARY_OPERATION_EXP, UNWEIGHTED_ALTERNATIVES_EXP, WEIGHTED_ALTERNATIVES_EXP),
  };

  /* ********************************************************** */
  // unary_operation_exp
  //   | expansion_with_tag_exp
  //   | primary
  static boolean expansion_for_sequence_exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expansion_for_sequence_exp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<expansion>");
    r = expansion(b, l + 1, 1);
    if (!r) r = expansion(b, l + 1, 2);
    if (!r) r = expansion(b, l + 1, 3);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // sequence_exp
  //   | unary_operation_exp
  //   | expansion_with_tag_exp
  //   | primary
  static boolean expansion_for_weighted_alt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expansion_for_weighted_alt")) return false;
    boolean r;
    r = expansion(b, l + 1, 0);
    if (!r) r = expansion(b, l + 1, 1);
    if (!r) r = expansion(b, l + 1, 2);
    if (!r) r = expansion(b, l + 1, 3);
    return r;
  }

  /* ********************************************************** */
  // grammarDeclaration_with_recover SEMICOLON
  public static boolean grammarDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "grammarDeclaration")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, GRAMMAR_DECLARATION, "<grammar declaration>");
    r = grammarDeclaration_with_recover(b, l + 1);
    p = r; // pin = 1
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, l, m, r, p, JsgfBnfParser::grammarDeclaration_top_recover);
    return r || p;
  }

  /* ********************************************************** */
  // !(SEMICOLON)
  static boolean grammarDeclaration_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "grammarDeclaration_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, SEMICOLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // !(IMPORT|PUBLIC|ruleDeclaration EQUALS)
  static boolean grammarDeclaration_top_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "grammarDeclaration_top_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !grammarDeclaration_top_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // IMPORT|PUBLIC|ruleDeclaration EQUALS
  private static boolean grammarDeclaration_top_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "grammarDeclaration_top_recover_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IMPORT);
    if (!r) r = consumeToken(b, PUBLIC);
    if (!r) r = grammarDeclaration_top_recover_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ruleDeclaration EQUALS
  private static boolean grammarDeclaration_top_recover_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "grammarDeclaration_top_recover_0_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ruleDeclaration(b, l + 1);
    r = r && consumeToken(b, EQUALS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // GRAMMAR grammarName
  static boolean grammarDeclaration_with_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "grammarDeclaration_with_recover")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, GRAMMAR);
    p = r; // pin = 1
    r = r && grammarName(b, l + 1);
    exit_section_(b, l, m, r, p, JsgfBnfParser::grammarDeclaration_recover);
    return r || p;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean grammarName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "grammarName")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, GRAMMAR_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // header_with_recover SEMICOLON
  public static boolean header(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header")) return false;
    if (!nextTokenIs(b, JSGF_IDENT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, HEADER, null);
    r = header_with_recover(b, l + 1);
    p = r; // pin = 1
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // header_top [grammarDeclaration]
  static boolean header_grammar(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_grammar")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = header_top(b, l + 1);
    p = r; // pin = 1
    r = r && header_grammar_1(b, l + 1);
    exit_section_(b, l, m, r, p, JsgfBnfParser::header_grammar_recover);
    return r || p;
  }

  // [grammarDeclaration]
  private static boolean header_grammar_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_grammar_1")) return false;
    grammarDeclaration(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // header_grammar importStatement*
  static boolean header_grammar_imports(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_grammar_imports")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = header_grammar(b, l + 1);
    p = r; // pin = 1
    r = r && header_grammar_imports_1(b, l + 1);
    exit_section_(b, l, m, r, p, JsgfBnfParser::header_grammar_imports_recover);
    return r || p;
  }

  // importStatement*
  private static boolean header_grammar_imports_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_grammar_imports_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!importStatement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "header_grammar_imports_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // !(PUBLIC|ruleDeclaration EQUALS)
  static boolean header_grammar_imports_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_grammar_imports_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !header_grammar_imports_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // PUBLIC|ruleDeclaration EQUALS
  private static boolean header_grammar_imports_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_grammar_imports_recover_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PUBLIC);
    if (!r) r = header_grammar_imports_recover_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ruleDeclaration EQUALS
  private static boolean header_grammar_imports_recover_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_grammar_imports_recover_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ruleDeclaration(b, l + 1);
    r = r && consumeToken(b, EQUALS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // header_grammar_imports ruleDefinition*
  static boolean header_grammar_imports_rules(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_grammar_imports_rules")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = header_grammar_imports(b, l + 1);
    r = r && header_grammar_imports_rules_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ruleDefinition*
  private static boolean header_grammar_imports_rules_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_grammar_imports_rules_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ruleDefinition(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "header_grammar_imports_rules_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // !(IMPORT|IDENTIFIER|LANGLE|PUBLIC)
  static boolean header_grammar_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_grammar_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !header_grammar_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // IMPORT|IDENTIFIER|LANGLE|PUBLIC
  private static boolean header_grammar_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_grammar_recover_0")) return false;
    boolean r;
    r = consumeToken(b, IMPORT);
    if (!r) r = consumeToken(b, IDENTIFIER);
    if (!r) r = consumeToken(b, LANGLE);
    if (!r) r = consumeToken(b, PUBLIC);
    return r;
  }

  /* ********************************************************** */
  // !(SEMICOLON)
  static boolean header_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, SEMICOLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // [header]
  static boolean header_top(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_top")) return false;
    Marker m = enter_section_(b, l, _NONE_);
    header(b, l + 1);
    exit_section_(b, l, m, true, false, JsgfBnfParser::header_top_recover);
    return true;
  }

  /* ********************************************************** */
  // !(GRAMMAR|IMPORT|PUBLIC|ruleDeclaration)
  static boolean header_top_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_top_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !header_top_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // GRAMMAR|IMPORT|PUBLIC|ruleDeclaration
  private static boolean header_top_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_top_recover_0")) return false;
    boolean r;
    r = consumeToken(b, GRAMMAR);
    if (!r) r = consumeToken(b, IMPORT);
    if (!r) r = consumeToken(b, PUBLIC);
    if (!r) r = ruleDeclaration(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // JSGF_IDENT VERSION IDENTIFIER*
  static boolean header_with_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_with_recover")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeTokens(b, 1, JSGF_IDENT, VERSION);
    p = r; // pin = 1
    r = r && header_with_recover_2(b, l + 1);
    exit_section_(b, l, m, r, p, JsgfBnfParser::header_recover);
    return r || p;
  }

  // IDENTIFIER*
  private static boolean header_with_recover_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "header_with_recover_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, IDENTIFIER)) break;
      if (!empty_element_parsed_guard_(b, "header_with_recover_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // importStatement_with_recover SEMICOLON
  public static boolean importStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, IMPORT_STATEMENT, "<import statement>");
    r = importStatement_with_recover(b, l + 1);
    p = r; // pin = 1
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, l, m, r, p, JsgfBnfParser::importStatement_loop_recover);
    return r || p;
  }

  /* ********************************************************** */
  // !(IMPORT|PUBLIC|ruleDeclaration EQUALS)
  static boolean importStatement_loop_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_loop_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !importStatement_loop_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // IMPORT|PUBLIC|ruleDeclaration EQUALS
  private static boolean importStatement_loop_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_loop_recover_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IMPORT);
    if (!r) r = consumeToken(b, PUBLIC);
    if (!r) r = importStatement_loop_recover_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ruleDeclaration EQUALS
  private static boolean importStatement_loop_recover_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_loop_recover_0_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ruleDeclaration(b, l + 1);
    r = r && consumeToken(b, EQUALS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // !(SEMICOLON|IMPORT|PUBLIC|ruleDeclaration EQUALS)
  static boolean importStatement_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !importStatement_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // SEMICOLON|IMPORT|PUBLIC|ruleDeclaration EQUALS
  private static boolean importStatement_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_recover_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SEMICOLON);
    if (!r) r = consumeToken(b, IMPORT);
    if (!r) r = consumeToken(b, PUBLIC);
    if (!r) r = importStatement_recover_0_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ruleDeclaration EQUALS
  private static boolean importStatement_recover_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_recover_0_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ruleDeclaration(b, l + 1);
    r = r && consumeToken(b, EQUALS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IMPORT ruleImport
  static boolean importStatement_with_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_with_recover")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, IMPORT);
    p = r; // pin = 1
    r = r && ruleImport(b, l + 1);
    exit_section_(b, l, m, r, p, JsgfBnfParser::importStatement_recover);
    return r || p;
  }

  /* ********************************************************** */
  // header_grammar_imports_rules
  static boolean jsgfFile(PsiBuilder b, int l) {
    return header_grammar_imports_rules(b, l + 1);
  }

  /* ********************************************************** */
  // ruleDeclaration_with_recover RANGLE
  public static boolean ruleDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ruleDeclaration")) return false;
    if (!nextTokenIs(b, LANGLE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, RULE_DECLARATION, null);
    r = ruleDeclaration_with_recover(b, l + 1);
    p = r; // pin = 1
    r = r && consumeToken(b, RANGLE);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // RULE_NAME_IDENTIFIER
  public static boolean ruleDeclarationName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ruleDeclarationName")) return false;
    if (!nextTokenIs(b, RULE_NAME_IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, RULE_NAME_IDENTIFIER);
    exit_section_(b, m, RULE_DECLARATION_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // !(EQUALS|RANGLE|SEMICOLON|PUBLIC)
  static boolean ruleDeclaration_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ruleDeclaration_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !ruleDeclaration_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // EQUALS|RANGLE|SEMICOLON|PUBLIC
  private static boolean ruleDeclaration_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ruleDeclaration_recover_0")) return false;
    boolean r;
    r = consumeToken(b, EQUALS);
    if (!r) r = consumeToken(b, RANGLE);
    if (!r) r = consumeToken(b, SEMICOLON);
    if (!r) r = consumeToken(b, PUBLIC);
    return r;
  }

  /* ********************************************************** */
  // LANGLE ruleDeclarationName
  static boolean ruleDeclaration_with_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ruleDeclaration_with_recover")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, LANGLE);
    p = r; // pin = 1
    r = r && ruleDeclarationName(b, l + 1);
    exit_section_(b, l, m, r, p, JsgfBnfParser::ruleDeclaration_recover);
    return r || p;
  }

  /* ********************************************************** */
  // ruleDefinition_with_recover SEMICOLON
  public static boolean ruleDefinition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ruleDefinition")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, RULE_DEFINITION, "<rule definition>");
    r = ruleDefinition_with_recover(b, l + 1);
    p = r; // pin = 1
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, l, m, r, p, JsgfBnfParser::ruleDefinition_loop_recover);
    return r || p;
  }

  /* ********************************************************** */
  // !(PUBLIC|ruleDeclaration EQUALS)
  static boolean ruleDefinition_loop_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ruleDefinition_loop_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !ruleDefinition_loop_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // PUBLIC|ruleDeclaration EQUALS
  private static boolean ruleDefinition_loop_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ruleDefinition_loop_recover_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PUBLIC);
    if (!r) r = ruleDefinition_loop_recover_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ruleDeclaration EQUALS
  private static boolean ruleDefinition_loop_recover_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ruleDefinition_loop_recover_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ruleDeclaration(b, l + 1);
    r = r && consumeToken(b, EQUALS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // !(SEMICOLON)
  static boolean ruleDefinition_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ruleDefinition_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, SEMICOLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
